configurable list